test/corpus/L1/negative/unclosed-bytearray.st
"---
id: unclosed-bytearray
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unclosed-bytearray
origin: spec-ANSI
section: error.unclosed-bytearray
note: byte array literal missing closing bracket
codes: E_UNCLOSED_BYTEARRAY
---"
#[1 2
